--- a/src/views/home.html
+++ b/src/views/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../assets/images/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="../assets/css/favoritos.css">
+    <link rel="stylesheet" href="../assets/css/home.css">
     <title>BraunMotors</title>
 </head>
 
@@ -28,7 +28,30 @@
     </header>
 
     <div class="page_div">
+        <div class="welcome_text">
+            <h1>Seja bem-vindo ao BraunMotors! 🚗💨</h1>
 
+            <br>
+
+            <p>Explore nossa lista de carros e veja fotos detalhadas de cada modelo. 
+                Adicione, edite ou remova veículos facilmente através do nosso sistema.
+            </p>
+
+            <br>
+
+            <p>✅ Veja os modelos disponíveis</p>
+            <p>✅ Gerencie o catálogo com facilidade</p>
+            <p>✅ Navegue entre os carros e suas imagens</p>
+            <p>✅ Veja a lista dos seus carros favoritos</p>
+
+            <br>
+
+            <h4>Comece agora e explore o catálogo!</h4>
+        </div>
+
+        <div class="pictures">
+            <img src="../assets/images/lancer_azul.jpg" alt="Carro Lancer Azul">
+        </div>
     </div>
 
     <footer>
