--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -71,6 +71,26 @@ body {
     gap: 15rem;
 }
 
+.welcome_text{
+    align-content: center;
+    color: #FFF;
+    font-size: 1.5rem;
+}
+
+.welcome_text p{
+    text-align: justify;
+}
+
+.welcome_text h1{
+    font-size: 4rem;
+}
+
+.pictures img{
+    width: 500px;
+    border: 8px solid #FFF;
+    border-radius: 60px;
+}
+
 .footer{
     background-color: #020031;
     box-shadow: inset 4px 4px 10px rgba(0, 0, 0, 0.5);
@@ -85,4 +105,17 @@ body {
 
 .light-mode .header {
     background-color: #1A0D6B;
+}
+
+.light-mode .welcome_text {
+    text-shadow: none;
+    color: #020031;
+}
+
+.light-mode .welcome_text h1 {
+    text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
+}
+
+.light-mode .pictures img {
+    border: 8px solid #020031;
 }
