--- a/src/views/marcas.html
+++ b/src/views/marcas.html
@@ -13,7 +13,7 @@
     <header>
         <div class="header">
             <div class="header_logo">
-                <a href="../index.html"><img src="../assets/images/logo_sem_fundo.png"
+                <a href="./home.html"><img src="../assets/images/logo_sem_fundo.png"
                     alt="Logo BraunMotors com um ícone de carro">
                 </a>
             </div>
@@ -22,6 +22,7 @@
                 <a href="./carros.html">Carros</a>
                 <a href="./marcas.html">Marcas</a>
                 <a href="./favoritos.html">Favoritos</a>
+                <button id="theme_button"><img src="../assets/images/moon.png" alt="Ícone de meia lua"></button>
             </div>
         </div>
     </header>
@@ -35,6 +36,8 @@
             <p>© 2025 BraunMotors. Todos os direitos reservados.</p>
         </div>
     </footer>
+
+    <script src="../assets/js/theme.js"></script>
 </body>
 
 </html>
