Alterando para tags semânticas
minhas páginas estavam apenas em divs, onde alterei as tags com conteúdo principal (main) para tags semânticas

--- a/src/views/carros.html
+++ b/src/views/carros.html
@@ -27,9 +27,9 @@
         </div>
     </header>
 
-    <div class="page_div">
+    <main>
 
-    </div>
+    </main>
 
     <footer>
         <div class="footer">
