--- a/src/views/home.html
+++ b/src/views/home.html
@@ -10,54 +10,45 @@
 </head>
 
 <body>
-    <header>
-        <div class="header">
-            <div class="header_logo">
-                <a href="./home.html"><img src="../assets/images/logo_sem_fundo.png"
-                    alt="Logo BraunMotors com um ícone de carro">
-                </a>
-            </div>
-
-            <div class="header_components">
-                <a href="./carros.html">Carros</a>
-                <a href="./marcas.html">Marcas</a>
-                <a href="./favoritos.html">Favoritos</a>
-                <button id="theme_button"><img src="../assets/images/moon.png" alt="Ícone de meia lua"></button>
-            </div>
+    <header class="header">
+        <div class="header_logo">
+            <a href="./home.html">
+                <img src="../assets/images/logo_sem_fundo.png" alt="Logo BraunMotors com um ícone de carro">
+            </a>
         </div>
+        <nav class="header_components">
+            <a href="./carros.html">Carros</a>
+            <a href="./marcas.html">Marcas</a>
+            <a href="./favoritos.html">Favoritos</a>
+            <button id="theme_button">
+                <img src="../assets/images/moon.png" alt="Ícone de meia lua">
+            </button>
+        </nav>
     </header>
 
-    <div class="page_div">
-        <div class="welcome_text">
+    <main>
+        <section class="welcome_text">
             <h1>Seja bem-vindo ao BraunMotors! 🚗💨</h1>
-
             <br>
-
             <p>Explore nossa lista de carros e veja fotos detalhadas de cada modelo. 
                 Adicione, edite ou remova veículos facilmente através do nosso sistema.
             </p>
-
             <br>
-
             <p>✅ Veja os modelos disponíveis</p>
             <p>✅ Gerencie o catálogo com facilidade</p>
             <p>✅ Navegue entre os carros e suas imagens</p>
             <p>✅ Veja a lista dos seus carros favoritos</p>
-
             <br>
-
             <h4>Comece agora e explore o catálogo!</h4>
-        </div>
+        </section>
 
-        <div class="pictures">
+        <section class="pictures">
             <img src="../assets/images/lancer_azul.jpg" alt="Carro Lancer Azul">
-        </div>
-    </div>
+        </section>
+    </main>
 
-    <footer>
-        <div class="footer">
-            <p>© 2025 BraunMotors. Todos os direitos reservados.</p>
-        </div>
+    <footer class="footer">
+        <p>© 2025 BraunMotors. Todos os direitos reservados.</p>
     </footer>
 
     <script src="../assets/js/theme.js"></script>
