--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -55,8 +55,6 @@ body {
 #theme_button{
     background: none;
     border: none;
-    background: none;
-    border: none;
     cursor: pointer;
 }
 
@@ -64,7 +62,7 @@ body {
     width: 2rem;
 }
 
-.page_div{
+main{
     padding: 5rem;
     display: flex;
     justify-content: space-between;
