--- a/src/views/marcas.html
+++ b/src/views/marcas.html
@@ -27,9 +27,9 @@
         </div>
     </header>
 
-    <div class="page_div">
+    <main>
 
-    </div>
+    </main>
 
     <footer>
         <div class="footer">
