--- a/src/views/home.html
+++ b/src/views/home.html
@@ -39,7 +39,7 @@
             <p>✅ Navegue entre os carros e suas imagens</p>
             <p>✅ Veja a lista dos seus carros favoritos</p>
             <br>
-            <h4>Comece agora e explore o catálogo!</h4>
+            <a href="./carros.html"><strong>Comece agora e explore o catálogo!</strong></a>
         </section>
 
         <section class="pictures">
