--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -66,22 +66,33 @@ main{
     padding: 5rem;
     display: flex;
     justify-content: space-between;
-    gap: 15rem;
+    gap: 14rem;
 }
 
 .welcome_text{
     align-content: center;
     color: #FFF;
-    font-size: 1.5rem;
 }
 
 .welcome_text p{
     text-align: justify;
+    font-size: 1.5rem;
 }
 
 .welcome_text h1{
     font-size: 4rem;
 }
+
+.welcome_text a{
+    font-size: 1.5rem;
+    text-decoration: none;
+}
+
+.welcome_text a:visited {
+    color: inherit;
+    text-decoration: none;
+}
+
 
 .pictures img{
     width: 500px;
