--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -94,10 +94,50 @@ main{
 }
 
 
-.pictures img{
-    width: 500px;
-    border: 8px solid #FFF;
+.carousel {
+    position: relative;
+    max-width: 500px;
+    margin: auto;
+    overflow: hidden;
     border-radius: 60px;
+    border: 8px solid #FFF;
+}
+
+.carousel-container {
+    display: flex;
+}
+
+.carousel img {
+    width: 500px;
+    opacity: 0;
+    position: absolute;
+    transition: opacity 0.8s ease-in-out;
+}
+
+.carousel img.active {
+    opacity: 1;
+    position: relative;
+}
+
+.prev, .next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: rgba(0, 0, 0, 0.4);
+    color: white;
+    border: none;
+    padding: 2px 5px;
+    cursor: pointer;
+    font-size: 18px;
+    z-index: 10;
+}
+
+.prev {
+    left: 10px;
+}
+
+.next {
+    right: 10px;
 }
 
 .footer{
@@ -125,6 +165,6 @@ main{
     text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
 }
 
-.light-mode .pictures img {
+.light-mode .carousel {
     border: 8px solid #020031;
 }
